--- a/app-express/package.json
+++ b/app-express/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon app.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "standard": "^16.0.3"
   },
   "dependencies": {
     "ejs": "^3.1.6",
